--- a/src/locale/messages.xlf
+++ b/src/locale/messages.xlf
@@ -73,11 +73,38 @@
         </context-group>
       </trans-unit>
       <trans-unit id="educationValue" datatype="html">
-        <source> Barchelo&apos;s Computer Science</source>
+        <source> Bachelor&apos;s Degree in CS</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/components/data-sheet/data-sheet.component.html</context>
           <context context-type="linenumber">28</context>
         </context-group>
+      </trans-unit>
+      <trans-unit id="english">
+        <source>English</source>
+      </trans-unit>
+      <trans-unit id="spanish">
+        <source>Spanish</source>
+      </trans-unit>
+      <trans-unit id="toolsLabel">
+        <source>Tools</source>
+      </trans-unit>
+      <trans-unit id="skillsLabel">
+        <source>Skills</source>
+      </trans-unit>
+      <trans-unit id="creativeChip">
+        <source>Creative</source>
+      </trans-unit>
+      <trans-unit id="teamPlayerChip">
+        <source>Team player</source>
+      </trans-unit>
+      <trans-unit id="problemSolverChip">
+        <source>Problem-solver</source>
+      </trans-unit>
+      <trans-unit id="leadChip">
+        <source>Lead</source>
+      </trans-unit>
+      <trans-unit id="agileChip">
+        <source>Agile Practices</source>
       </trans-unit>
     </body>
   </file>
